2003-06-26  Pierre-Luc Paour <gallery@paour.com> (1.1-b9)

	* Implemented extra fields in UI and protocol.

2003-06-25  Pierre-Luc Paour <gallery@paour.com> (1.1-b8)

	* Implemented a new way to communicate with the server for getting
	  the list of albums, which is much more efficient because only
	  writable albums and their parents are sent, and because the server
	  does less work. This should fix one of the causes for socket exceptions
	  because listing the albums takes less time.
	* Since this new format is also hierarchical, this also paves the way for
	  an album tree component rather than a flat list (no implementation yet).
	* Fixed preview frame popping up before main frame.

2003-06-17  Pierre-Luc Paour <gallery@paour.com> (1.1-b7)

	* Fixed rotation combined with flipping, fixed losing EXIF.
	* Picture added using the Browse button now appended to the
	  list instead of prepending them.

2003-06-16  Pierre-Luc Paour <gallery@paour.com> (1.1-b6)

	* Implemented rotate-before-upload based on jpegtran.

2003-06-16  Pierre-Luc Paour <gallery@paour.com> (1.1-b5)

	* Truncating long URLs in UI to make it nicer when CMS URLs are
	  used.
	* Added UI for rotating pictures before upload. Actual rotation
	  of pictures not implemented yet: only thumbnails.
	* Added icons on most buttons and menu items.

2003-06-13  Pierre-Luc Paour <gallery@paour.com> (1.1-b4)

	* Reorganized event handling and data modeling for more
	  simplicity and robustness. Phewww...
	* Fixed creating top-level albums in some cases.
	* Fixed logging out.
	* Can now create a first album when no Album is available.
	* Removed the Username and password fields in MainFrame.
	* Preferences can be invoked in such a way that it jumps
	  to a panel immediately.
	* Fixed losing caption when selecting more than one picture.
	* Fixed drag-n-dropping folders.
	* Unhacked list selection.
	* Modified HTTPConnection so it can be instanciated on Java 1.3
	  even though https is not supported.
