@@ -2,3 +2,4 @@ pane.1=com.gallery.GalleryRemote.prefs.GeneralPanel
 pane.2=com.gallery.GalleryRemote.prefs.UploadPanel
 pane.3=com.gallery.GalleryRemote.prefs.URLPanel
 pane.4=com.gallery.GalleryRemote.prefs.ProxyPanel
+pane.5=com.gallery.GalleryRemote.prefs.QuickConfigPanel
