@@ -1,6 +1,9 @@
 2003-06-26  Pierre-Luc Paour <gallery@paour.com> (1.1-b9)
 
 	* Implemented extra fields in UI and protocol.
+	* New prefs panel: Quick Config, to help newbies set their
+	  configuration to match the prefs of your gallery. This is me
+	  pursuing my own agenda :-)
 
 2003-06-25  Pierre-Luc Paour <gallery@paour.com> (1.1-b8)
 
